fixed image jumping issue

--- a/styles.css
+++ b/styles.css
@@ -288,7 +288,6 @@ form textarea {
 
 
 /* stories */
-
 .storytile  {
     height: 80vh;
     width: 300px;
@@ -302,6 +301,7 @@ form textarea {
     width: 500px;
     transition: 0.5s ease-in-out;
 }
+
 
 .storytile img:hover {
     transition: 0.5s ease-in-out;
@@ -322,10 +322,11 @@ form textarea {
 /* h1 missing fix later */
 .storytile h1 {
     position: relative; /*required for z-index usage */
-    top:50%;
+    top:80%;
     left:50%;
     transform: translateX(-50%);
     color: white;
+    width: 280px; /*fix image moving up*/
     font-weight: 800;
     padding-left: 30px;
     z-index: 2;
